==> JohnStov/SensESP-Engine-Room-Monitor/src/ioexpander.cpp <==
#include <cstdio>
#include <cstdlib>
#include <math.h>
#include <map>
#include <vector>
#include "ioexpander.hpp"

  uint8_t IOExpander::check_reset() {
    uint8_t user_flash_reg = reg::USER_FLASH;
    uint8_t value;
    if(i2c_write_blocking(i2c, address, &user_flash_reg, 1, false) == 0) {
      return 0x00;
    }
    if(i2c_read_blocking(i2c, address, (uint8_t *)&value, sizeof(uint8_t), false) == 0) {
      return 0x00;
    }

    return value;
  }

  bool IOExpander::reset() {
    uint32_t start_time = millis();
    set_bits(reg::CTRL, ctrl_mask::RESET);
    // Wait for a register to read its initialised value
    while(check_reset() != 0x78) {
      sleep_ms(1);
      if(millis() - start_time >= RESET_TIMEOUT_MS) {
        if(debug)
          printf("Timed out waiting for Reset!");
        return false;
      }
    }

    return true;
  }

  uint16_t IOExpander::get_chip_id() {
      return ((uint16_t)reg_read_uint8(i2c, address, reg::CHIP_ID_H) << 8) | (uint16_t)reg_read_uint8(i2c, address, reg::CHIP_ID_L);
  }

  void IOExpander::set_address(uint8_t address) {
    set_bit(reg::CTRL, 4);
    reg_write_uint8(i2c, this->address, reg::ADDR, address);
    this->address = address;
    sleep_ms(250); //TODO Handle addr change IOError better
    //wait_for_flash()
    clr_bit(reg::CTRL, 4);
  }

  void IOExpander::enable_interrupt_out(bool pin_swap) {
    set_bit(reg::INT, int_bit::OUT_EN);
    change_bit(reg::INT, int_bit::PIN_SWAP, pin_swap);
  }

  void IOExpander::disable_interrupt_out() {
    clr_bit(reg::INT, int_bit::OUT_EN);
  }

  void IOExpander::pwm_load(bool wait_for_load) {
    // Load new period and duty registers into buffer
    uint32_t start_time = millis();
    set_bit(reg::PWMCON0, 6);  // Set the "LOAD" bit of PWMCON0

    if(wait_for_load) {
      while(pwm_loading()) {
        sleep_ms(1); // Wait for "LOAD" to complete
        if(millis() - start_time >= timeout) {
          if(debug)
            printf("Timed out waiting for PWM load!");
          return;
        }
      }
    }
  }

  void IOExpander::pwm_clear(bool wait_for_clear) {
    uint32_t start_time = millis();
    set_bit(reg::PWMCON0, 4);  // Set the "CLRPWM" bit of PWMCON0
    if(wait_for_clear) {
      while(pwm_clearing()) {
        sleep_ms(1); // Wait for "CLRPWM" to complete
        if(millis() - start_time >= timeout) {
          if(debug)
            printf("Timed out waiting for PWM clear!");
          return;
        }
      }
    }
  }

  void IOExpander::set_pwm_period(uint16_t value, bool load, bool wait_for_load) {
    value &= 0xffff;
    reg_write_uint8(i2c, address, reg::PWMPL, (uint8_t)(value & 0xff));
    reg_write_uint8(i2c, address, reg::PWMPH, (uint8_t)(value >> 8));

    if(load)
      pwm_load(wait_for_load);
  }

  void IOExpander::set_mode(uint8_t pin, uint8_t mode, bool schmitt_trigger, bool invert) {
    if(pin < 1 || pin > NUM_PINS) {
      printf("ValueError: Pin should be in range 1-14.\n");
      return;
    }

    Pin& io_pin = pins[pin - 1];

    uint8_t gpio_mode = mode & 0b11;
    uint8_t io_type = (mode >> 2) & 0b11;
    uint8_t initial_state = mode >> 4;

    if(io_pin.get_mode() == mode) {
      if(debug) {
        printf("Mode already is %s\n", MODE_NAMES[io_type]);
      }
      return;
    }

    if((io_type != Pin::TYPE_IO) && !io_pin.mode_supported(mode)) {
      if(debug) {
        printf("Pin %d does not support %s!\n", pin, MODE_NAMES[io_type]);
      }
      return;
    }

    io_pin.set_mode(mode);
    if(debug) {
      printf("Setting pin %d to mode %s %s, state: %s\n", pin, MODE_NAMES[io_type], GPIO_NAMES[gpio_mode], STATE_NAMES[initial_state]);
    }

    if(mode == PIN_MODE_PWM) {
      set_bit(io_pin.reg_io_pwm, io_pin.pwm_channel);
      change_bit(reg::PNP, io_pin.pwm_channel, invert);
      set_bit(reg::PWMCON0, 7);  // Set PWMRUN bit
    }
    else {
      if(io_pin.get_type() & Pin::TYPE_PWM)
        clr_bit(io_pin.reg_io_pwm, io_pin.pwm_channel);
    }

    uint8_t pm1 = reg_read_uint8(i2c, address, io_pin.reg_m1);
    uint8_t pm2 = reg_read_uint8(i2c, address, io_pin.reg_m2);

    // Clear the pm1 and pm2 bits
    pm1 &= 255 - (1 << io_pin.pin);
    pm2 &= 255 - (1 << io_pin.pin);

    // Set the new pm1 and pm2 bits according to our gpio_mode
    pm1 |= (gpio_mode >> 1) << io_pin.pin;
    pm2 |= (gpio_mode & 0b1) << io_pin.pin;

    reg_write_uint8(i2c, address, io_pin.reg_m1, pm1);
    reg_write_uint8(i2c, address, io_pin.reg_m2, pm2);

    // Set up Schmitt trigger mode on inputs
    if(mode == PIN_MODE_PU || mode == PIN_MODE_IN)
      change_bit(io_pin.reg_ps, io_pin.pin, schmitt_trigger);

    // 5th bit of mode encodes default output pin state
    reg_write_uint8(i2c, address, io_pin.reg_p, (initial_state << 3) | io_pin.pin);
  }

  int16_t IOExpander::input(uint8_t pin, uint32_t adc_timeout) {
    if(pin < 1 || pin > NUM_PINS) {
      if(debug)
        printf("ValueError: Pin should be in range 1-14.\n");
      return -1;
    }

    Pin& io_pin = pins[pin - 1];

    if(io_pin.get_mode() == PIN_MODE_ADC) {
      if(debug) {
        printf("Reading ADC from pin %d\n", pin);
      }

      clr_bits(reg::ADCCON0, 0x0f);
      set_bits(reg::ADCCON0, io_pin.adc_channel);
      reg_write_uint8(i2c, address, reg::AINDIDS, 0);
      set_bit(reg::AINDIDS, io_pin.adc_channel);
      set_bit(reg::ADCCON1, 0);

      clr_bit(reg::ADCCON0, 7);  // ADCF - Clear the conversion complete flag
      set_bit(reg::ADCCON0, 6);  // ADCS - Set the ADC conversion start flag

      // Wait for the ADCF conversion complete flag to be set
      unsigned long start_time = millis();
      while(!get_bit(reg::ADCCON0, 7)) {
        sleep_ms(10);
        if(millis() - start_time >= adc_timeout) {
          if(debug)
            printf("Timeout waiting for ADC conversion!");
          return -1;
        }
      }

      uint8_t hi = reg_read_uint8(i2c, address, reg::ADCRH);
      uint8_t lo = reg_read_uint8(i2c, address, reg::ADCRL);
      return (uint16_t)(hi << 4) | (uint16_t)lo;
    }
    else {
      if(debug) {
        printf("Reading IO from pin %d\n", pin);
      }

      uint8_t pv = get_bit(io_pin.reg_p, io_pin.pin);
      return (pv) ? 1 : 0;
    }
  }

  void IOExpander::output(uint8_t pin, uint16_t value, bool load, bool wait_for_load) {
    if(pin < 1 || pin > NUM_PINS) {
      printf("Pin should be in range 1-14.");
      return;
    }

    Pin& io_pin = pins[pin - 1];

    if(io_pin.get_mode() == PIN_MODE_PWM) {
      if(debug) {
        printf("Outputting PWM to pin: %d\n", pin);
      }

      reg_write_uint8(i2c, address, io_pin.reg_pwml, (uint8_t)(value & 0xff));
      reg_write_uint8(i2c, address, io_pin.reg_pwmh, (uint8_t)(value >> 8));
      if(load)
        pwm_load(wait_for_load);
    }
    else {
      if(value == LOW) {
        if(debug) {
          printf("Outputting LOW to pin: %d\n", pin);
        }

        clr_bit(io_pin.reg_p, io_pin.pin);
      }
      else if(value == HIGH) {
        if(debug) {
          printf("Outputting HIGH to pin: %d\n", pin);
        }

        set_bit(io_pin.reg_p, io_pin.pin);
      }
    }
  }

  void IOExpander::wait_for_flash(void) {
    // Wait for the IOE to finish writing non-volatile memory.
    unsigned long start_time = millis();
    while(get_interrupt_flag()) {
      if(millis() - start_time > timeout) {
        printf("Timed out waiting for interrupt!\n");
        return;
      }
      sleep_ms(1);
    }

    start_time = millis();
    while(!get_interrupt_flag()) {
      if(millis() - start_time > timeout) {
        printf("Timed out waiting for interrupt!\n");
        return;
      }
      sleep_ms(1);
    }
  }
